--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,15 @@ nav {
   border-style: ridge;
 }
 
+.image-draw{
+  width: 100%;
+  height: 350px;
+  background-color: rgb(234, 244, 247);
+  border-color: rgb(50, 42, 165);
+  border-radius: 2ch;
+  border-style: ridge;
+}
+
 
 form input,
 form button {
