--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  scroll-behavior: smooth;
 }
 body {
   background-image: linear-gradient(120deg, #65d4f6 0%, #85a5fd 100%);
@@ -17,15 +18,50 @@ nav {
   justify-content: space-around;
   align-items: center;
   min-height: 10vh;
+  padding: 0px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-right: 250px;
+  border-radius: 60%;
+  margin-top: 10px;
   background: rgba(69, 69, 70, 0.39);
 }
 
 .nav-links {
-  width: 50%;
+  width: 200%;
+  padding: 0;
   display: flex;
+  flex-direction: inherit;
   justify-content: space-around;
   align-items: center;
   list-style: none;
+}
+
+.complete-btn {
+  background: rgb(22, 177, 86);
+  color: #f7fffe;
+  padding: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.player1-btn {
+  background: rgba(0, 128, 128, 0.534);
+  color: #f7fffe;
+  padding: 10px;
+}
+
+.player2-btn {
+  background: rgba(19, 0, 128, 0.534);
+  color: #f7fffe;
+  padding: 10px;
+}
+
+.refresh-btn {
+  background-color: rgb(22, 177, 86);
+  color: #f7fffe;
+  padding: auto;
+  margin-top: 130px;
 }
 
 .canvas-draw {
@@ -35,7 +71,7 @@ nav {
   border-style: ridge;
 }
 
-.image-draw{
+.image-draw {
   width: 100%;
   height: 350px;
   background-color: rgb(234, 244, 247);
@@ -43,7 +79,6 @@ nav {
   border-radius: 2ch;
   border-style: ridge;
 }
-
 
 form input,
 form button {
